TestCases/ASTTests/SyntaxErrorTests/tests/test30.c
enum Color {
    RED,
    GREEN = "green", // Shouldn't be possible
    BLUE
};